asu_dir 7.x-1.6, 2017-02-17
---------------------------
- Added support for full integration with ASU Local iSearch Directory (ASU LID) module
- Form fields and directory will now respect ASU LID-style expertise and local tag settings, if applicable
- Solr Health Check fallback added. If ASU LID is enabled, and Solr is down, the directory display will fall
back to ASU LID profile view
- Added customizable sort option, allowing switching between iSearch customized sorting, and local iSearch imported
weights
- Added option to 'Always Use Local iSearch View', which will always use the ASU LID view instead of Solr view,
if ASU LID module is configured

asu_dir 7.x-1.5, 2016-09-27
---------------------------
- Added support for reflection of custom sorting in iSearch
- Added custom pagination options to the field form
- Added support for displaying tenure/non-tenure faculty
- Added support for multiple directory displays on the same page
- Added cutomizable search and filter displays, allowing display of expertise, facultytitle and search filters
- Added sorting by first name
- Added grid people display option
- Added dependencies on asu_dir_utilities module, asu-dept-picker module, and react library
- Added integration with the asu_isearch module, so listings will link to local people profiles if they have been imported

asu_dir 7.x-1.4, 2016-02-03
---------------------------

- Added alphabet filter widget, which filters by first letter of last name.
- Added sorting widget, which allows sorting by Rank, and Lastname (asc and desc)
- Added expertise area facet dropdown box
- Implemented query string writing for URL, to allow deep linking and browser history functionality
- Fixed responsive styling for webstandards compliance
- Fixed html markup structure for webstandards compliance